# VoiceType

./: INSTALL.md  README.md  build.sh  install.sh  run.sh  update.sh
app/: Cargo.toml  GUI_README.md  voicetype-gui.desktop
app-python/: .gitignore  build-deb.sh  pyproject.toml
app-python/src/voicetype/: __init__.py  audio.py  config.py  gui.py  main.py  stt_client.py  virtual_keyboard.py
app/src/: gui.rs  main.rs  virtual_keyboard.rs
