[project]
name = "voicetype"
version = "0.6.0"
description = "VoiceType — real-time Linux voice keyboard powered by Deepgram Nova-3 / Flux STT"
license = "ISC"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Daniel Rosehill", email = "public@danielrosehill.com" },
]

dependencies = [
    "evdev>=1.7",
    "sounddevice>=0.5",
    "numpy>=1.24",
    "websockets>=13",
    "PyQt6>=6.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
vad = ["ten-vad>=1.0.6"]

[project.scripts]
voicetype = "voicetype.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voicetype"]
