[package]
name = "voicetype"
version = "0.3.0"
edition = "2021"
description = "VoiceType — a real-time Linux voice keyboard powered by Deepgram Flux STT"
license = "ISC"
repository = "https://github.com/danielrosehill/VoiceType"
homepage = "https://github.com/danielrosehill/VoiceType"
readme = "README.md"

[[bin]]
name = "voicetype"
path = "src/main.rs"

[[bin]]
name = "voicetype-gui"
path = "src/gui.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
cpal = "0.15"
libc = "0.2"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.27", features = ["user", "fs", "ioctl"] }
regex = "1.0"
http = "1"
iced = { version = "0.13", features = ["tokio"] }
directories = "5.0"
global-hotkey = "0.6"
rodio = "0.19"
# tray-icon = "0.19"  # Disabled - requires GTK on Linux, incompatible with KDE/Wayland
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
maintainer = "Daniel Rosehill <public@danielrosehill.com>"
copyright = "2025-2026, Daniel Rosehill"
license-file = ["LICENSE.txt", "4"]
extended-description = """\
VoiceType is a real-time Linux voice keyboard that types what you say \
using Deepgram's Flux STT API. The GUI provides an easy-to-use interface \
for controlling voice dictation with persistent API key storage and global \
hotkey support (default: F13). Features audible beep feedback and works \
with all Linux applications."""
depends = "libasound2, pkexec"
section = "utils"
priority = "optional"
assets = [
    ["target/release/voicetype", "usr/bin/", "755"],
    ["target/release/voicetype-gui", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/voicetype/", "644"],
    ["GUI_README.md", "usr/share/doc/voicetype/", "644"],
    ["LICENSE.txt", "usr/share/doc/voicetype/", "644"],
    ["voicetype-gui.desktop", "usr/share/applications/", "644"],
]
